templates/service-chamaclientesapp.yml
kind: Service
apiVersion: v1
metadata:
  name: chama-service
spec:
  selector:
    app: chama
  ports:
  - port: 8000
