templates/ingress-chamaclientesapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chama-ingress
spec:
  rules:
   - host: "chama.local"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chama-service
            port:
              number: 8000
