templates/ingress-clientesapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clientes-ingress
spec:
  rules:
   - host: "clientes.local"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clientes-service
            port:
              number: 8000
